--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 </p>
 
 <form [formGroup]="form" (ngSubmit)="submit()">
-  <label formArrayName="orders" *ngFor="let order of orderControls; let i = index">
+  <label formArrayName="orders" *ngFor="let order of ordersFormArray.controls; let i = index">
     <input type="checkbox" [formControlName]="i">
     {{ordersData[i].name}}
   </label>
